feat: Implement voice assistance backend with LLM integration
- Added core functionality for voice assistance in Flask.
- Created agent logic for intent classification and response generation.
- Integrated LangChain for LLM interactions and memory management.
- Developed service layer for handling business logic related to cart operations.
- Implemented voice routes for user interactions and session management.
- Added text-to-speech utility for spoken responses.
- Enhanced input validation for user text.
- Updated requirements for new dependencies and versions.
- Refactored existing code for improved structure and readability.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
 /venv
 /JS_BACKEND/node_modules
+/FLASK_BACKEND/VoiceAssistance_Updated/__pycache__/
+/FLASK_BACKEND/VoiceAssistance/__pycache__/
+/FLASK_BACKEND/VoiceAssistance_Updated/routes/__pycache__/
+/FLASK_BACKEND/VoiceAssistance_Updated/models/__pycache__/
+/FLASK_BACKEND/VoiceAssistance_Updated/venv
+/FLASK_BACKEND/VoiceAssistance_Updated/service/__pycache__/
+/FLASK_BACKEND/VoiceAssistance_Updated/llm_engine/__pycache__
+/FLASK_BACKEND/VoiceAssistance_Updated/agent/__pycache__
+# Environment variables
+.env
+.env.*
+/FLASK_BACKEND/.env
+/FLASK_BACKEND/VoiceAssistance_Updated/.env
